# leasium

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Leasium-5-day-report.docx  Leasium-5-day-report.md  Leasium-rename-brief-2026-06-21.md  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/: account-operating-mode-ia.md  ai-mailbox-intake-design.md  app-flows-allmode-followup-2026-06-26.md  automation-strategy-2026-05-23.md  branded-invoice-document-scope-2026-06-23.md  codex-brief-ai-mailbox-ux-2026-06-14.md  codex-brief-entity-dimension-backend-2026-06-25.md  codex-brief-intake-detect-trust-2026-06-26.md  codex-brief-leasium-ai-intake-onboarding-2026-06-17.md  codex-brief-leasium-ai-polish-2026-06-16.md  codex-brief-onboarding-self-heal-2026-06-27.md  codex-brief-smart-intake-review-intelligence-2026-06-27.md  codex-brief-switcher-removal-2026-06-25.md  deployment.md  design-governance.md  doorloop-benchmark-2026-05-31.md  external-design-review-2026-05-23.md  horizon-implementation-brief.md  leasium-ai-capabilities-and-roadmap-2026-06-23.md  leasium-ai-conversation-build-plan-slice1.md  leasium-ai-conversation-redesign-2026-06-15.md  leasium-codex-design-source-of-truth.md  leasium-ux-world-class-audit-2026-05-30.md  migrate-tenant-full-flow-spec-2026-06-24.md  mobile-ux-review-2026-05-23.md  multi-entity-dimension-plan-2026-06-25.md  multi-entity-filter-ux-brief-2026-06-25.md  multi-entity-xero-ia.md  mvp-readiness-punchlist-2026-06-19.md  mvp-ux-performance-review-2026-05-30.md  nav-pattern-research-2026-05-23.md  (+25 more)
(+554 files in other folders)
