[project]
name = "stewart"
version = "0.1.0"
description = "AI-native lease operations platform foundation."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "openpyxl>=3.1.5",
    "pillow>=10.4.0",
    "psycopg[binary]>=3.2.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "pyjwt[crypto]>=2.10.0",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.9",
    "sentry-sdk>=2.0",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
    "mypy>=1.11.1",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.2",
    "types-openpyxl>=3.1.5.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps", "stewart", "tests", "scripts"]
exclude = [".git", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".tools", ".venv", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/versions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "**/__pycache__/**",
    "**/*.pyc",
]

[tool.hatch.build.targets.wheel]
packages = ["apps", "stewart", "scripts"]

[tool.hatch.build.targets.wheel.force-include]
"alembic.ini" = "alembic.ini"
"migrations" = "migrations"
